BB-22563: [Frontend] UI issues on tablet/mobile (#35704)

--- a/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/product-kit-items-table.scss
+++ b/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/product-kit-items-table.scss
@@ -161,12 +161,8 @@
             }
         }
 
-        &-product + &-entry {
-            border-top: $product-kit-items-mobile-table-border;
-        }
-
         &.product-last-in-group {
-            border-bottom: $product-kit-items-table-border;
+            border-bottom: $product-kit-items-mobile-table-border;
         }
     }
 }
